--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>Home</li>
+        </ul>
+    </nav>
+
+
+    <!-- main div -->
+    <div id="main">
+    <div id="products">
+        
+    </div>
+    </div>
 </body>
 </html>
