--- a/Index.html
+++ b/Index.html
@@ -11,55 +11,210 @@
 
     </style>
 </head>
+<nav>
+    <input type="checkbox" name="check" id="check">
+    <label for="check">
+        <div class="sp1"></div>
+        <div class="sp2"></div>
+        <div class="sp3"></div>
+    </label>
+    <ul>
+        <li><a href="">Catagory</a></li>
+        <li><a href="">home</a></li>
+        <li><a href="">home</a></li>
+        <li><a href="">home</a></li>
+        <li><a href="">home</a></li>
+    </ul>
+</nav>
 <body>
+    <div id="sidebar">
+        <li><a href="">Catagory</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">SingUp</a></li>
+    </div>
     <div id="main">
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
-<div class="products"></div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
+<div class="products">
+    <h4>  </h4>
+    <img src="Image/" alt="">
+    <button>Show more..</button>
+</div>
            
     </div>
     
