--- a/Index.html
+++ b/Index.html
@@ -12,23 +12,42 @@
     </style>
 </head>
 <nav>
-    <input type="checkbox" name="check" id="check">
-    <label for="check">
+
+    <label id="label_1">
+        <div class="sp1"></div>
+        <div class="sp2"></div>
+        <div class="sp3"></div>
+    </label>
+    <label id="label">
         <div class="sp1"></div>
         <div class="sp2"></div>
         <div class="sp3"></div>
     </label>
     <ul>
-        <li><a href="">Catagory</a></li>
+        <li id="hover_id_icon"><a href="">Catagory</a>
+            <ul id="hover_id_menu">
+                <li>Elactronic</li>
+            </ul>
+        </li>
         <li><a href="">home</a></li>
         <li><a href="">home</a></li>
         <li><a href="">home</a></li>
         <li><a href="">home</a></li>
     </ul>
 </nav>
+
 <body>
     <div id="sidebar">
-        <li><a href="">Catagory</a></li>
+        <li id="hover_icon"><a href="">Catagory</a>
+        <ul id="hover_menu">
+            <li><a href="">Electronic</a></li>
+            <li><a href="">Whatch</a></li>
+            <li><a href="">Whatch</a></li>
+            <li><a href="">Whatch</a></li>
+            <li><a href="">Whatch</a></li>
+        </ul>
+
+    </li>
         <li><a href="">Home</a></li>
         <li><a href="">Home</a></li>
         <li><a href="">Home</a></li>
@@ -218,5 +237,7 @@
            
     </div>
     
+
+    <script src="main.js"></script>
 </body>
 </html>
