--- a/Singup.html
+++ b/Singup.html
@@ -7,7 +7,7 @@
     <title>Document</title>
  </head>
  <body>
-    <form action="https://script.google.com/macros/s/AKfycbwJz3ICrla-IjOoSk_CU1J8BPKB8fWYqVI4rP9ZMKvAIYTfB8WgBckaXNHdrCPvzGoTkg/exec"mathod="POST"name="form">
+    <form action="https://script.google.com/macros/s/AKfycbwJz3ICrla-IjOoSk_CU1J8BPKB8fWYqVI4rP9ZMKvAIYTfB8WgBckaXNHdrCPvzGoTkg/exec"mathod="POST"name="form"id="form">
         <input type="Email"id="email"name="Email"Placeholder="Email"><br>
         <input type="Password"id="email"name="Password"Placeholder="Password"><br>
         <input type="Password"id="email"name="Re-Password"Placeholder="Re type-password"><br>
