--- a/Singup.html
+++ b/Singup.html
@@ -8,9 +8,11 @@
  </head>
  <body>
     <form action="https://script.google.com/macros/s/AKfycbwJz3ICrla-IjOoSk_CU1J8BPKB8fWYqVI4rP9ZMKvAIYTfB8WgBckaXNHdrCPvzGoTkg/exec"mathod="POST"name="form"id="form">
+       <label for="">SingUp</label><br><br>
+        <div id="massage">Submit sucessfull</div>
         <input type="Email"id="email"name="Email"Placeholder="Email"><br>
-        <input type="Password"id="email"name="Password"Placeholder="Password"><br>
-        <input type="Password"id="email"name="Re-Password"Placeholder="Re type-password"><br>
+        <input type="Password"id="password"name="Password"Placeholder="Password"><br>
+        <input type="Password"id="Re-password"name="Re-Password"Placeholder="Re type-password"><br>
         <button type="submit">Submit</button>
     </form>
 
@@ -22,10 +24,30 @@
         form.addEventListener('submit', e => {
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => alert("Thank you! your form is submitted successfully." ))
             .then(() => {  window.location.reload(); })
             .catch(error => console.error('Error!', error.message))
             return false;
+        })
+
+
+        let form_submit=document.getElementById("form").addEventListener('submit',event =>{
+            let massage=document.getElementById("massage");
+            let email=document.getElementById("email");
+            let password=document.getElementById("password");
+            let Re_password=document.getElementById("Re-password");
+            massage.style.display="block"
+            if(email.value==""){
+                email.style.border="1px solid red"
+                massage.style.display="none"
+            }else{
+
+            }
+            if(password.value==Re_password||password.value==""){
+                password.style.border="1px solid red"
+                massage.style.display="none"
+            }else{
+                
+            }
         })
     </script>
  </body>
