--- a/Index.html
+++ b/Index.html
@@ -26,13 +26,13 @@
     <ul>
         <li id="hover_id_icon"><a href="">Catagory</a>
             <ul id="hover_id_menu">
-                <li>Elactronic</li>
+                <li><a href="">Elactronic</a></li>
             </ul>
         </li>
-        <li><a href="">home</a></li>
-        <li><a href="">home</a></li>
-        <li><a href="">home</a></li>
-        <li><a href="">home</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Contacts</a></li>
+        <li><a href="">Follow us</a></li>
+        <li><a href="Singup.html">SingUp</a></li>
     </ul>
 </nav>
 
@@ -48,10 +48,10 @@
         </ul>
 
     </li>
-        <li><a href="">Home</a></li>
-        <li><a href="">Home</a></li>
-        <li><a href="">Home</a></li>
-        <li><a href="">SingUp</a></li>
+        <li><a href="">Contacts</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Follow us</a></li>
+        <li><a href="Singup.html">SingUp</a></li>
     </div>
     <div id="main">
 <div class="products">
